2003-07-18  Richard Henderson  <rth@redhat.com>

	* elflink.c (_bfd_elf_dynamic_symbol_p): New.
	* elf-bfd.h (_bfd_elf_dynamic_symbol_p): Declare it.
	(SYMBOL_REFERENCES_LOCAL, SYMBOL_CALLS_LOCAL): Use it.
	* elf32-xtensa.c (xtensa_elf_dynamic_symbol_p): Likewise.
	* elf64-alpha.c (alpha_elf_dynamic_symbol_p): Likewise.
	* elf64-hppa.c (elf64_hppa_dynamic_symbol_p): Likewise.
	* elfxx-ia64.c (elfNN_ia64_dynamic_symbol_p): Likewise.
	Update all callers to provide the relocation being resolved.

2003-07-17  Shaun Jackman <sjackman@pathwayconnect.com>

	* config.bfd (arm-wince-pe): Add -DARM_COFF_BUGFIX to
	targ_cflags.

2003-07-17  Nick Clifton  <nickc@redhat.com>

	* po/es.po: New Spanish translation.
	* po/sv.po: New Swedish translation.
	* po/opcodes.pot: Regenerate.

2003-07-16  Richard Henderson  <rth@redhat.com>

	* config.bfd, configure.host, configure.in: Remove ia64-aix support.
	* elfxx-ia64.c, targets.c: Likewise.

2003-07-16  Richard Henderson  <rth@redhat.com>

	* elfxx-ia64.c (elfNN_ia64_dynamic_symbol_p): Properly return false
	for symbols defined locally plus -Bsymbolic.  Tidy logic.

2003-07-15  Richard Sandiford  <rsandifo@redhat.com>

	* archures.c (bfd_mach_mips7000): New.
	* bfd-in2.h: Regenerated.
	* cpu-mips.c (arch_info_struct): Add an entry for mips:7000.
	* elfxx-mips.c (mips_set_isa_flags): Handle bfd_mach_mips7000.
	(mips_mach_extensions): Add an entry for it.

2003-07-14  Nick Clifton  <nickc@redhat.com>

	* po/tr.po: Update with latest version.
	* po/SRC-POTFILES.in: Regenerate.
	* po/bfd.pot: Regenerate.
	* Makfile.in: Regenerate.
	* configure: Regenerate.

2003-07-12  Jeff Baker  <jbaker@qnx.com>

	* bfd/config.bfd (__QNXTARGET__): Define for Neutrino architectures.
	* bfd/elf32-arm.h (ELF_MAXPAGESIZE): Set to 4k for Neutrino.
	* bfd/elf32-sh.c (ELF_MAXPAGESIZE): Set to 4k for Neutrino.
	* bfd/elf32-ppc.c (ELF_MAXPAGESIZE): Set to 4k for Neutrino.

2003-07-12  Jeff Muizelaar  <muizelaar@rogers.com>
